bg(fix): Fixed my test and modified my controller - modified order controller - modified my order component
