# swagger.json
@@ -38,13 +38,26 @@
           "in" : "body",
           "name" : "body",
           "required" : false,
+          "description" : "A new user should supply name, username, password and a valid email address.",
           "schema" : {
-            "$ref" : "#/definitions/Model7"
+            "$ref" : "#/definitions/signupModel"
           },
           "x-examples" : {
             "application/json" : "{   \n    \"name\": \"sundayA\"\n    \"username\": \"sundayA\",\n    \"password\": \"12345\",\n    \"email\": \"sundaA@gmail.com\"\n}"
           }
-        }, {
+        }, 
+        {
+          "in" : "body",
+          "name" : "bad body parameters",
+          "required" : false,
+          "description" : "When a user supply bad data like invalid email, username that already exist",
+          "schema" : {
+            "$ref" : "#/definitions/badSignupModel"
+          },
+          "x-examples" : {
+            "application/json" : "{   \n    \"name\": \"sundayA\"\n    \"username\": \"sundayA\",\n    \"password\": \"12345\",\n    \"email\": \"sundaA@gmail.com\"\n}"
+          }
+        },{
           "name" : "signup",
           "in" : "path",
           "description" : "Example values form path are: 'signin' 'signup'",
@@ -53,9 +66,15 @@
         } ],
         "responses" : {
           "201" : {
-            "description" : "A new user should supply name, username, password and a valid email address.",
+            "description" : "The response contain the userId, name, email and token",
             "schema" : {
-              "$ref" : "#/definitions/Model8"
+              "$ref" : "#/definitions/signupResponseModel"
+            }
+          },
+          "401" : {
+            "description" : "404 Not found on bad response",
+            "schema" : {
+              "$ref" : "#/definitions/badSignupResponseModel"
             }
           }
         }
@@ -87,7 +106,7 @@
           "200" : {
             "description" : "A new user should supply name, username, password and a valid email address.",
             "schema" : {
-              "$ref" : "#/definitions/Model8"
+              "$ref" : "#/definitions/signupResponseModel"
             }
           }
         }
@@ -110,7 +129,7 @@
           "200" : {
             "description" : "A user is updated to admin/caterer.role",
             "schema" : {
-              "$ref" : "#/definitions/Model21"
+              "$ref" : "#/definitions/upgradeModel"
             }
           }
         }
@@ -166,7 +185,7 @@
           "name" : "body",
           "required" : false,
           "schema" : {
-            "$ref" : "#/definitions/Model3"
+            "$ref" : "#/definitions/mealModel"
           },
           "x-examples" : {
             "application/json" : "{\n    \"name\": \"moi moi and rice\",\n    \"price\": 500,\n    \"description\": \"delicious\"\n}"
@@ -176,13 +195,13 @@
           "201" : {
             "description" : "The created meal is returne in the response",
             "schema" : {
-              "$ref" : "#/definitions/Model10"
+              "$ref" : "#/definitions/mealResponseModel"
             }
           }
         }
       }
     },
-    "/api/v1/meals/12" : {
+    "/api/v1/meals/:id" : {
       "put" : {
         "tags" : [ "Meals" ],
         "consumes" : [ "application/json" ],
@@ -194,6 +213,14 @@
           "required" : false,
           "type" : "string",
           "x-example" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjEsInVzZXJuYW1lIjoic3VuZGF5QSIsInJvbGUiOiJhZG1pbiIsImlhdCI6MTUyNjc1OTQ0OSwiZXhwIjoxNTI2ODQ1ODQ5fQ.g4x9TT1Lm7idUSMLhEB4tCt3MFCbM20wA2IT9qwhrZs"
+        },
+        {
+          "name" : "Params",
+          "in" : ":id",
+          "description" : "the id of the meal to be updated",
+          "required" : false,
+          "type" : "string",
+          "x-example" : "23"
         }, {
           "in" : "body",
           "name" : "body",
@@ -207,7 +234,7 @@
         } ],
         "responses" : {
           "201" : {
-            "description" : "Definition generated from Swagger Inspector",
+            "description" : "Meal updated successfuly",
             "schema" : {
               "$ref" : "#/definitions/Model11"
             }
@@ -225,22 +252,20 @@
           "required" : false,
           "type" : "string",
           "x-example" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjEsInVzZXJuYW1lIjoic3VuZGF5QSIsInJvbGUiOiJhZG1pbiIsImlhdCI6MTUyNjc1OTQ0OSwiZXhwIjoxNTI2ODQ1ODQ5fQ.g4x9TT1Lm7idUSMLhEB4tCt3MFCbM20wA2IT9qwhrZs"
-        }, {
-          "in" : "body",
-          "name" : "body",
+        },
+        {
+          "name" : "Params",
+          "in" : ":id",
+          "description" : "the id of the meal to be updated",
           "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/Model2"
-          },
-          "x-examples" : {
-            "application/json" : "{\n    \"name\": \"moi moi and meat\",\n    \"price\": 1000,\n    \"description\": \"delicious\"\n}"
-          }
-        } ],
+          "type" : "string",
+          "x-example" : "23"
+        }],
         "responses" : {
           "200" : {
-            "description" : "Definition generated from Swagger Inspector",
+            "description" : "Meal successfuly deleted",
             "schema" : {
-              "$ref" : "#/definitions/Model12"
+              "$ref" : "#/definitions/deleteModel"
             }
           }
         }
@@ -263,7 +288,7 @@
           "200" : {
             "description" : "The response contain a menu info and meal id of the menu",
             "schema" : {
-              "$ref" : "#/definitions/Model22"
+              "$ref" : "#/definitions/menuResponseModel"
             }
           }
         }
@@ -349,7 +374,28 @@
           "201" : {
             "description" : "Definition generated from Swagger Inspector",
             "schema" : {
-              "$ref" : "#/definitions/Model14"
+              "$ref" : "#/definitions/postOrderModel"
+            }
+          }
+        }
+      },
+      "get" : {
+        "tags" : [ "Orders" ],
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "authorization",
+          "in" : "header",
+          "description" : "Generated header parameter. Example value ='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjEsInVzZXJuYW1lIjoic3VuZGF5QSIsInJvbGUiOiJhZG1pbiIsImlhdCI6MTUyNjc1OTQ0OSwiZXhwIjoxNTI2ODQ1ODQ5fQ.g4x9TT1Lm7idUSMLhEB4tCt3MFCbM20wA2IT9qwhrZs'",
+          "required" : false,
+          "type" : "string",
+          "x-example" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjEsInVzZXJuYW1lIjoic3VuZGF5QSIsInJvbGUiOiJhZG1pbiIsImlhdCI6MTUyNjc1OTQ0OSwiZXhwIjoxNTI2ODQ1ODQ5fQ.g4x9TT1Lm7idUSMLhEB4tCt3MFCbM20wA2IT9qwhrZs"
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "Definition generated from Swagger Inspector",
+            "schema" : {
+              "$ref" : "#/definitions/orderModel"
             }
           }
         }
@@ -429,49 +475,63 @@
         "updatedAt" : "updatedAt"
       }
     },
-    "Model12" : {
+    "deleteModel" : {
       "properties" : {
         "message" : {
           "type" : "string"
         }
       },
       "example" : {
-        "message" : "message"
+        "message" : "Meal deleted successfuly"
       }
     },
     "Array" : {
       "properties" : {
         "OrderCount" : {
-          "type" : "string"
+          "type" : "integer",
+          "format" : "int32"
         },
-        "Meal" : {
+        "meals" : {
           "$ref" : "#/definitions/Meal"
         }
       }
     },
     "Model13" : {
       "properties" : {
-        "message" : {
-          "type" : "string"
-        },
-        "menu" : {
-          "$ref" : "#/definitions/Menu"
-        }
+        "id" : 1,
+        "date" : "date",
+          "createdAt" : "createdAt",
+          "address": "Reverend street ojo",
+          "orderBefore" : "orderBefore",
+          "title" : "title",
+          "userId" : 6,
+          "updatedAt" : "updatedAt",
+          "meals": {
+            "$ref" : "#/definitions/meals"
+          }
       },
       "example" : {
-        "message" : "message",
-        "menu" : {
           "date" : "date",
           "createdAt" : "createdAt",
           "orderBefore" : "orderBefore",
           "id" : 0,
           "title" : "title",
           "userId" : 6,
-          "updatedAt" : "updatedAt"
-        }
+          "updatedAt" : "updatedAt",
+          "meals": [
+            {     "image" : "image",
+              "createdAt" : "createdAt",
+              "price" : 6,
+              "name" : "rice",
+              "description" : "very good",
+              "id" : 0,
+              "userId" : 1,
+              "updatedAt" : "updatedAt"
+            }
+          ]
       }
     },
-    "Model10" : {
+    "mealResponseModel" : {
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -505,8 +565,8 @@
         "image" : "image",
         "createdAt" : "createdAt",
         "price" : 6,
-        "name" : "name",
-        "description" : "description",
+        "name" : "rice",
+        "description" : "very good",
         "id" : 0,
         "userId" : 1,
         "updatedAt" : "updatedAt"
@@ -583,7 +643,7 @@
         }
       }
     },
-    "Model14" : {
+    "postOrderModel" : {
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -620,42 +680,121 @@
           "type" : "integer",
           "format" : "int32"
         },
-        "mealId" : {
-          "type" : "integer",
-          "format" : "int32"
+        "meals" : {
+          "type" : "Array"
         }
       },
       "example" : {
+        "id" : 0,
         "catererId" : 5,
         "createdAt" : "createdAt",
         "address" : "address",
         "quantity" : 6,
-        "mealId" : 2,
+        "meals" : [1, 2],
         "totalPrice" : 1,
-        "id" : 0,
         "title" : "title",
         "userId" : 5,
         "status" : "status",
         "updatedAt" : "updatedAt"
       }
     },
+    "orderModel" : {
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "status" : {
+          "type" : "string"
+        },
+        "title" : {
+          "type" : "string"
+        },
+        "address" : {
+          "type" : "string"
+        },
+        "quantity" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "totalPrice" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "catererId" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "updatedAt" : {
+          "type" : "string"
+        },
+        "createdAt" : {
+          "type" : "string"
+        },
+        "userId" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "meals" : {
+          "type" : "Array"
+        }
+      },
+      "example" : [{
+        "id" : 1,
+        "catererId" : 5,
+        "createdAt" : "createdAt",
+        "address" : "address",
+        "meals" : [{
+          "createdAt" : "createdAt",
+          "price" : 6,
+          "name" : "name",
+          "description" : "description",
+          "id" : 0,
+          "userId" : 1,
+          "updatedAt" : "updatedAt",
+          "orderMealItems": {
+            "quantity": 3
+          }
+        },
+        {
+          "createdAt" : "createdAt",
+          "price" : 6,
+          "name" : "name",
+          "description" : "description",
+          "id" : 0,
+          "userId" : 1,
+          "updatedAt" : "updatedAt",
+          "orderMealItems": {
+            "quantity": 4
+          }
+        }],
+        "totalPrice" : 12,
+        "title" : "title",
+        "userId" : 5,
+        "status" : "pending",
+        "updatedAt" : "updatedAt"
+      }]
+    },
     "Model0" : {
       "properties" : {
         "title" : {
           "type" : "string"
         },
-        "mealId" : {
+        "meals" : [{
           "type" : "integer",
           "format" : "int32"
-        },
+        }],
         "orderBefore" : {
           "type" : "string"
         }
       },
       "example" : {
-        "mealId" : 0,
-        "orderBefore" : "orderBefore",
-        "title" : "title"
+        "meals" : [
+          1,
+          2
+        ],
+        "orderBefore" : "24",
+        "title" : "today menu"
       }
     },
     "Model15" : {
@@ -702,7 +841,7 @@
         "description" : "description"
       }
     },
-    "Model3" : {
+    "mealModel" : {
       "properties" : {
         "name" : {
           "type" : "string"
@@ -713,12 +852,16 @@
         },
         "description" : {
           "type" : "string"
+        },
+        "image" : {
+          "type" : "string"
         }
       },
       "example" : {
-        "price" : 0,
-        "name" : "name",
-        "description" : "description"
+        "price" : 100,
+        "name" : "rice",
+        "description" : "very good",
+        "image": "image"
       }
     },
     "Model4" : {
@@ -778,34 +921,91 @@
     },
     "Model6" : {
       "properties" : {
-        "title" : {
-          "type" : "string"
-        },
-        "mealId" : {
+        "meals" : [{
           "type" : "integer",
-          "format" : "int32"
+          "format" : "int32",
+          "mealId": 1,
+          "menuId": 2,
+          "quantity": 3
         },
-        "menuId" : {
+        {
           "type" : "integer",
-          "format" : "int32"
-        },
-        "quantity" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
+          "format" : "int32",
+          "mealId": 2,
+          "menuId": 3,
+          "quantity": 4
+        }],
         "address" : {
           "type" : "string"
         }
       },
       "example" : {
-        "mealId" : 0,
-        "quantity" : 1,
-        "address" : "address",
-        "menuId" : 6,
-        "title" : "title"
+        "meals" : [{
+          "mealId": 2,
+          "menuId": 3,
+          "quantity": 4
+        },
+        {"mealId": 1,
+          "menuId": 2,
+          "quantity": 3
+        }
+      ],
+        "address" : "address"
       }
     },
-    "Model7" : {
+    "signupModel" : {
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "username" : {
+          "type" : "string"
+        },
+        "email" : {
+          "type" : "string"
+        },
+        "token" : {
+          "type" : "string"
+        }
+      },
+      "example" : {
+        "name" : "name",
+        "email" : "email@gmail.com",
+        "username" : "username",
+        "password" : "password"
+      }
+    },
+    "badSignupModel" : {
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "username" : {
+          "type" : "string"
+        },
+        "email" : {
+          "type" : "string"
+        },
+        "token" : {
+          "type" : "string"
+        }
+      },
+      "example" : {
+        "name" : "name",
+        "email" : "invalidEmail",
+        "username" : "username",
+        "password" : "password"
+      }
+    },
+    "signupResponseModel" : {
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -832,31 +1032,14 @@
         "token" : "token"
       }
     },
-    "Model8" : {
+    "badSignupResponseModel" : {
       "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "name" : {
-          "type" : "string"
-        },
-        "username" : {
-          "type" : "string"
-        },
-        "email" : {
-          "type" : "string"
-        },
-        "token" : {
+        "message" : {
           "type" : "string"
         }
       },
       "example" : {
-        "name" : "name",
-        "id" : 0,
-        "email" : "email",
-        "username" : "username",
-        "token" : "token"
+        "message" : "Invalid Email"
       }
     },
     "Model20" : {
@@ -878,7 +1061,7 @@
         "token" : "token"
       }
     },
-    "Model21" : {
+    "upgradeModel" : {
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -898,10 +1081,10 @@
         "id" : 0,
         "message" : "message",
         "setAdmin" : {
-          "name" : "name",
+          "name" : "kevin",
           "id" : 6,
-          "email" : "email",
-          "username" : "username"
+          "email" : "email@gmai.com",
+          "username" : "kevin"
         },
         "token" : "token"
       }
@@ -922,14 +1105,14 @@
           "type" : "string"
         }
       },
-      "example" : {
-        "name" : "name",
+      "setAdmin" : {
+        "name" : "kevin",
         "id" : 6,
-        "email" : "email",
-        "username" : "username"
+        "email" : "email@gmai.com",
+        "username" : "kevin"
       }
     },
-    "Model22" : {
+    "menuResponsModel" : {
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -989,8 +1172,7 @@
         }
       },
       "example" : {
-        "emailOrUsername" : "emailOrUsername",
-        "id" : 0
+        "emailOrUsername" : "kenware"
       }
     },
     "Model24" : {
@@ -1000,7 +1182,7 @@
         }
       },
       "example" : {
-        "message" : "message"
+        "message" : "resetLink sent to your email"
       }
     }
   }
